--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.14",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^12.23.22",
+    "i18next": "^25.5.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.0.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.3",
+    "tailwindcss": "^4.1.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
